OJD-2556 convert integration tests to spring boot