@@ -61,12 +61,8 @@
 		<memcachedSessionManager.version>2.3.2</memcachedSessionManager.version>
 		<jaxb.version>2.3.1</jaxb.version>
 		<jaxbcore.version>2.3.0.1</jaxbcore.version>
-<<<<<<< HEAD
-    	<jackson.version>2.12.3</jackson.version>
-=======
     <jackson.version>2.12.3</jackson.version>
 		<juno.webpack.skip>false</juno.webpack.skip>
->>>>>>> SA-52
 	</properties>
 	<repositories>
 		<repository>
@@ -1422,30 +1418,13 @@
 				<directory>${basedir}/src/main/resources</directory>
 				<filtering>true</filtering>
 			</resource>
-			<resource>
-				<directory>${basedir}/database</directory>
-				<filtering>false</filtering>
-				<targetPath>create_instance/database</targetPath>
-			</resource>
-			<resource>
-				<directory>${basedir}/package_files</directory>
-				<filtering>false</filtering>
-				<targetPath>create_instance/package_files</targetPath>
-			</resource>
 		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<image>
-						<env>
-							<BP_JVM_VERSION>16.0.2</BP_JVM_VERSION>
-						</env>
-					</image>
-					<layers>
-						<enabled>true</enabled>
-					</layers>
+					<executable>true</executable>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -2487,210 +2466,9 @@
 										</plugin>
 									</plugins>
 								</configuration>
-<<<<<<< HEAD
-							</execution>
-						</executions>
-						<version>2.10</version>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<includes>
-								<include>integration/tests/*</include>
-							</includes>
-							<excludes>
-								<exclude>**/SetupDatabase.java</exclude>
-							</excludes>
-							<skipTests>false</skipTests>
-							<argLine>-Xms512m -Xmx512m -Xss256k -XX:MaxNewSize=64m -XX:MaxPermSize=192m</argLine>
-							<classesDirectory>${project.build.outputDirectory}</classesDirectory>
-							<systemPropertyVariables>
-								<oscar.skip.dbinit>true</oscar.skip.dbinit>
-								<buildDirectory>${project.build.directory}</buildDirectory>
-							</systemPropertyVariables>
-							<useManifestOnlyJar>false</useManifestOnlyJar>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>verify</goal>
-									<goal>integration-test</goal>
-								</goals>
-							</execution>
-						</executions>
-						<version>3.0.0-M4</version>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-
-
-
-
-		<profile>
-			<id>environment-dev</id>
-			<activation>
-				<property>
-					<name>environment</name>
-					<value>dev</value>
-				</property>
-			</activation>
-			<properties>
-				<!-- default port for embedded tomcat -->
-				<!-- override with -Dmaven.tomcat.port=the-port -->
-				<maven.tomcat.port>9090</maven.tomcat.port>
-				<!-- default context path for embedded tomcat -->
-				<!-- override with -Dmaven.tomcat.path=/the-path -->
-				<!-- the external properties file will be loaded using this name -->
-				<!-- from the ${user.home} directory, e.g. ~/the-path.properties -->
-				<!-- with / context path it uses ~/localhost.properties) -->
-				<maven.tomcat.path>/</maven.tomcat.path>
-				<!-- default host name for embedded tomcat -->
-				<!-- override with -Dmaven.tomcat.hostname=the-host-name -->
-				<maven.tomcat.hostname>${env.HOSTNAME}</maven.tomcat.hostname>
-				<!-- make the context reloadable to allow hot deploy -->
-				<maven.tomcat.contextReloadable>true</maven.tomcat.contextReloadable>
-				<!-- delay the redeployment of the webapp. If this value is to low tomcat will redeploy
-					 before compilation is complete causing it to redeploy twice -->
-				<maven.tomcat.backgroundProcessorDelay>30</maven.tomcat.backgroundProcessorDelay>
-			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.tomcat.maven</groupId>
-						<artifactId>tomcat7-maven-plugin</artifactId>
-						<version>2.2</version>
-						<dependencies>
-							<dependency>
-								<groupId>org.apache.tomcat.embed</groupId>
-								<artifactId>tomcat-embed-core</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-util</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-coyote</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-api</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-jdbc</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-dbcp</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-servlet-api</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-jsp-api</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-jasper</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-jasper-el</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-el-api</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-catalina</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-tribes</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-catalina-ha</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-annotations-api</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat</groupId>
-								<artifactId>tomcat-juli</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-
-							<dependency>
-								<groupId>org.apache.tomcat.embed</groupId>
-								<artifactId>tomcat-embed-logging-juli</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.apache.tomcat.embed</groupId>
-								<artifactId>tomcat-embed-logging-log4j</artifactId>
-								<version>${tomcat.version}</version>
-							</dependency>
-						</dependencies>
-						<configuration>
-							<systemProperties>
-								<oscar.use.integration.prop.file>${oscar.use.integration.prop}</oscar.use.integration.prop.file>
-							</systemProperties>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.3</version>
-						<configuration combine.self="override">
-							<useIncrementalCompilation>true</useIncrementalCompilation>
-							<source>1.8</source>
-							<target>1.8</target>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-=======
 							</plugin>
 						</plugins>
 					</build>
 				</profile>
->>>>>>> SA-52
 	</profiles>
 </project>
